01-record-creation-details/.test/configmap-change-annotation-patch.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: my-configmap
  annotations:
    kyverno.io/created-by: evil-user
