01-record-creation-details/.test/configmap-pre-policy-add-annotation-patch.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: configmap-pre-policy
  annotations:
    kyverno.io/created-by: evil-user
