01-record-creation-details/.test/configmap-pre-policy.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: configmap-pre-policy
data:
  key: value
