01-record-creation-details/.test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: test-record-creation-details
spec:
  concurrent: false
  steps:
    - name: create pre-policy configmap (no annotation)
      try:
        - apply:
            file: configmap-pre-policy.yaml
    - name: create mutating policy
      use:
        template: ../../fixtures/create-policy-and-wait-ready.yaml
        with:
          bindings:
          - name: file
            value: ../mutating-policy.yaml
          - name: kind
            value: MutatingPolicy
          - name: name
            value: record-creation-details

    - name: create validating policy
      use:
        template: ../../fixtures/create-policy-and-wait-ready.yaml
        with:
          bindings:
          - name: file
            value: ../validating-policy.yaml
          - name: kind
            value: ValidatingPolicy
          - name: name
            value: record-creation-details-protect

    - name: create configmap
      try:
        - apply:
            file: configmap.yaml
        - assert:
            file: configmap-assert.yaml
    - name: tamper by adding annotation to pre-policy configmap
      try:
        - patch:
            file: configmap-pre-policy-add-annotation-patch.yaml
            expect:
              - check:
                  ($error): >-
                    admission webhook "vpol.validate.kyverno.svc-fail" denied the request: Policy record-creation-details-protect failed: The annotation kyverno.io/created-by is protected and may not be added, altered, or removed.
    - name: tamper by changing annotation on protected configmap
      try:
        - patch:
            file: configmap-change-annotation-patch.yaml
            expect:
              - check:
                  ($error): >-
                    admission webhook "vpol.validate.kyverno.svc-fail" denied the request: Policy record-creation-details-protect failed: The annotation kyverno.io/created-by is protected and may not be added, altered, or removed.
    - name: tamper by removing annotation on protected configmap
      try:
        - patch:
            file: configmap-remove-annotation-patch.yaml
            expect:
              - check:
                  ($error): >-
                    admission webhook "vpol.validate.kyverno.svc-fail" denied the request: Policy record-creation-details-protect failed: The annotation kyverno.io/created-by is protected and may not be added, altered, or removed.
