fixtures/create-policy-and-wait-ready.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/steptemplate-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: StepTemplate
metadata:
  name: create-policy
spec:
  try:
  - create:
      file: ($file)
  - assert:
      template: true
      resource:
        apiVersion: policies.kyverno.io/v1
        kind: ($kind)
        metadata:
          name: ($name)
        status:
          conditionStatus:
            (conditions[?type == 'WebhookConfigured']):
            - message: Webhook configured.
              reason: Succeeded
              status: "True"
              type: WebhookConfigured
            (conditions[?type == 'RBACPermissionsGranted']):
            - message: Policy is ready for reporting.
              reason: Succeeded
              status: "True"
              type: RBACPermissionsGranted
            (length(conditions)): 2
            ready: true
